# mesh-shader-fuckery

./: Cargo.toml  build.rs
src/: fish.toy  gl.rs  main.mesh.glsl  main.rs  mesh.rs  paint.frag.glsl  paint.mesh.glsl  paint.rs  paint_brush.compute.glsl  particle.frag.glsl  particle.mesh.glsl  particle.task.glsl  particle_simulation.compute.glsl  particles.rs  perf.rs  scene.frag.glsl  scene.mesh.glsl  scene_view.rs  terrain.rs
src/shaders/: global.common.glsl  paint.common.glsl  paint.frag.glsl  paint_brush.compute.glsl  particle.common.glsl  particle.frag.glsl  particle.mesh.glsl  particle_simulation.compute.glsl  terrain.frag.glsl  terrain.mesh.glsl
